--- a/themes/sepia/sass/_sepia.nav.scss
+++ b/themes/sepia/sass/_sepia.nav.scss
@@ -54,46 +54,57 @@ nav {
   }
   
   .topbar-menu {
+    background: none repeat scroll 0 0 $theme-teritary-color;
     display: none;
-    float: right;
+    text-align: right;
     
     @include small-medium() {
       display: inline-block;
-      
+      margin: 0;
+      padding: 0;
+
       .border {
         display: none;
       }
       
-      margin-top: 0;
-      padding: 0;
-
       i[class^="icon-"] {
         margin-right: 0;
       }
 
+      li {
+        margin: 0;
+
+        &.last {
+          margin-right: 1em;
+        }
+      }
       .menu-item {
         @include rem('font-size', 18px);
         @include text-shadow(1px 1px 0 rgba(0, 0, 0, .5));
         @extend %font-bold;
 
-        color: $white;
+        color: $theme-primary-color;
         display: inline-block;
         margin-left: -4px;
         padding: 10px 15px;
         outline: 0;
 
-        &:hover {
-          background-color: lighten($theme-primary-color, 10%);
+        a {
+          &.active-trail,
+          &.active {
+            background-color: $theme-teritary-color;
+            color: $theme-primary-color;
 
-          color: $white;
-          text-decoration: none;
-        }
+            &:hover {
+              background-color: $theme-teritary-color;
+              color: $black;
+            }
+          }
 
-        &.active-trail,
-        &.active {
-          color: $white;
-          text-decoration: none;
-          background-color: $theme-primary-color;
+          &:hover {
+            background-color: $theme-secondary-color;
+            color: $black;
+          }
         }
       }
     }
