Made h tags bold

--- a/themes/sepia/css/sepia.style.css
+++ b/themes/sepia/css/sepia.style.css
@@ -2167,99 +2167,102 @@ a:hover {
 .content-wrapper .primary-content-full h1 {
   font-size: 18px;
   font-size: 1.125rem;
+  font-weight: bold;
   margin-top: 16px;
 }
-/* line 70, ../sass/_sepia.elements.scss */
+/* line 71, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content h2,
 .content-wrapper .primary-content-full h2 {
   font-size: 16px;
   font-size: 1rem;
+  font-weight: bold;
   margin-top: 14px;
 }
-/* line 75, ../sass/_sepia.elements.scss */
+/* line 77, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content h3, .content-wrapper .primary-content h4, .content-wrapper .primary-content h5,
 .content-wrapper .primary-content-full h3,
 .content-wrapper .primary-content-full h4,
 .content-wrapper .primary-content-full h5 {
   font-size: 14px;
   font-size: 0.875rem;
+  font-weight: bold;
   margin-top: 12px;
 }
-/* line 80, ../sass/_sepia.elements.scss */
+/* line 83, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content p,
 .content-wrapper .primary-content-full p {
   margin-bottom: 8px;
 }
-/* line 84, ../sass/_sepia.elements.scss */
+/* line 87, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content .submitted,
 .content-wrapper .primary-content-full .submitted {
   font-size: 12px;
   font-size: 0.75rem;
   padding-bottom: 4px;
 }
-/* line 89, ../sass/_sepia.elements.scss */
+/* line 92, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content .geshifilter,
 .content-wrapper .primary-content-full .geshifilter {
   margin: 18px 12px;
 }
-/* line 93, ../sass/_sepia.elements.scss */
+/* line 96, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content .block-title,
 .content-wrapper .primary-content-full .block-title {
   font-size: 18px;
   font-size: 1.125rem;
 }
-/* line 97, ../sass/_sepia.elements.scss */
+/* line 100, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content #page-title,
 .content-wrapper .primary-content-full #page-title {
   font-size: 22px;
   font-size: 1.375rem;
 }
-/* line 101, ../sass/_sepia.elements.scss */
+/* line 104, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content .timestamp,
 .content-wrapper .primary-content-full .timestamp {
   font-size: 10px;
   font-size: 0.625rem;
 }
-/* line 105, ../sass/_sepia.elements.scss */
+/* line 108, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content .tags,
 .content-wrapper .primary-content-full .tags {
   font-size: 14px;
   font-size: 0.875rem;
 }
-/* line 109, ../sass/_sepia.elements.scss */
+/* line 112, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content ul,
 .content-wrapper .primary-content-full ul {
   list-style: disc inside none;
   margin: 8px;
 }
-/* line 113, ../sass/_sepia.elements.scss */
+/* line 116, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content ul.action-links,
 .content-wrapper .primary-content-full ul.action-links {
   margin: 0;
 }
-/* line 118, ../sass/_sepia.elements.scss */
+/* line 121, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content ol,
 .content-wrapper .primary-content-full ol {
   list-style: decimal inside none;
   margin: 8px;
 }
-/* line 125, ../sass/_sepia.elements.scss */
+/* line 128, ../sass/_sepia.elements.scss */
 .content-wrapper .comment-wrapper {
   padding-top: 12px;
   border-top: 1px solid #bbbbbb;
 }
-/* line 128, ../sass/_sepia.elements.scss */
+/* line 131, ../sass/_sepia.elements.scss */
 .content-wrapper .comment-wrapper input {
   font-size: 14px;
   font-size: 0.875rem;
   padding: 4px;
 }
-/* line 134, ../sass/_sepia.elements.scss */
+/* line 137, ../sass/_sepia.elements.scss */
 .content-wrapper .menu .expanded .menu {
   margin-left: 8px;
 }
 
-/* line 139, ../sass/_sepia.elements.scss */
+/* line 142, ../sass/_sepia.elements.scss */
 img {
   display: inline;
   height: auto;
@@ -2267,7 +2270,7 @@ img {
   vertical-align: bottom;
 }
 
-/* line 146, ../sass/_sepia.elements.scss */
+/* line 149, ../sass/_sepia.elements.scss */
 footer {
   font-size: 12px;
   font-size: 0.75rem;
@@ -2277,7 +2280,7 @@ footer {
   z-index: 2;
   margin-top: 18px;
 }
-/* line 154, ../sass/_sepia.elements.scss */
+/* line 157, ../sass/_sepia.elements.scss */
 footer .site-name {
   font-size: 32px;
   font-size: 2rem;
