--- a/themes/sepia/sass/_sepia.elements.scss
+++ b/themes/sepia/sass/_sepia.elements.scss
@@ -64,16 +64,19 @@ a {
   .primary-content-full {
     h1 {
       @include rem('font-size', 18px);
+      font-weight: bold;
       margin-top: 16px;
     }
 
     h2 {
       @include rem('font-size', 16px);
+      font-weight: bold;
       margin-top: 14px;
     }
 
     h3, h4, h5 {
       @include rem('font-size', 14px);
+      font-weight: bold;
       margin-top: 12px;
     }
 
