--- a/themes/sepia/css/sepia.style.css
+++ b/themes/sepia/css/sepia.style.css
@@ -1,4 +1,4 @@
-/*
+/*!
  *  Font Awesome 3.0.1
  *  the iconic font designed for use with Twitter Bootstrap
  *  -------------------------------------------------------
@@ -2129,26 +2129,31 @@ h6 {
 }
 
 /* line 29, ../sass/_sepia.elements.scss */
+strong {
+  font-weight: bold;
+}
+
+/* line 33, ../sass/_sepia.elements.scss */
 header {
   margin-bottom: 28px;
 }
 
-/* line 33, ../sass/_sepia.elements.scss */
+/* line 37, ../sass/_sepia.elements.scss */
 a {
   color: #584d3b;
 }
-/* line 36, ../sass/_sepia.elements.scss */
+/* line 40, ../sass/_sepia.elements.scss */
 a:hover {
   color: #9c4a02;
 }
 
-/* line 43, ../sass/_sepia.elements.scss */
+/* line 47, ../sass/_sepia.elements.scss */
 .content-wrapper .tabs {
   font-size: 12px;
   font-size: 0.75rem;
   float: right;
 }
-/* line 48, ../sass/_sepia.elements.scss */
+/* line 52, ../sass/_sepia.elements.scss */
 .content-wrapper .breadcrumb {
   font-size: 14px;
   font-size: 0.875rem;
@@ -2156,13 +2161,13 @@ a:hover {
   margin-bottom: 8px;
   border-bottom: 1px solid #bbbbbb;
 }
-/* line 56, ../sass/_sepia.elements.scss */
+/* line 60, ../sass/_sepia.elements.scss */
 .content-wrapper .region-content .views-row {
   padding-bottom: 12px;
   margin-bottom: 12px;
   border-bottom: 1px solid #bbbbbb;
 }
-/* line 65, ../sass/_sepia.elements.scss */
+/* line 69, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content h1,
 .content-wrapper .primary-content-full h1 {
   font-size: 18px;
@@ -2170,7 +2175,7 @@ a:hover {
   font-weight: bold;
   margin-top: 16px;
 }
-/* line 71, ../sass/_sepia.elements.scss */
+/* line 75, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content h2,
 .content-wrapper .primary-content-full h2 {
   font-size: 16px;
@@ -2178,7 +2183,7 @@ a:hover {
   font-weight: bold;
   margin-top: 14px;
 }
-/* line 77, ../sass/_sepia.elements.scss */
+/* line 81, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content h3, .content-wrapper .primary-content h4, .content-wrapper .primary-content h5,
 .content-wrapper .primary-content-full h3,
 .content-wrapper .primary-content-full h4,
@@ -2188,81 +2193,81 @@ a:hover {
   font-weight: bold;
   margin-top: 12px;
 }
-/* line 83, ../sass/_sepia.elements.scss */
+/* line 87, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content p,
 .content-wrapper .primary-content-full p {
   margin-bottom: 8px;
 }
-/* line 87, ../sass/_sepia.elements.scss */
+/* line 91, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content .submitted,
 .content-wrapper .primary-content-full .submitted {
   font-size: 12px;
   font-size: 0.75rem;
   padding-bottom: 4px;
 }
-/* line 92, ../sass/_sepia.elements.scss */
+/* line 96, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content .geshifilter,
 .content-wrapper .primary-content-full .geshifilter {
   margin: 18px 12px;
 }
-/* line 96, ../sass/_sepia.elements.scss */
+/* line 100, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content .block-title,
 .content-wrapper .primary-content-full .block-title {
   font-size: 18px;
   font-size: 1.125rem;
 }
-/* line 100, ../sass/_sepia.elements.scss */
+/* line 104, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content #page-title,
 .content-wrapper .primary-content-full #page-title {
   font-size: 22px;
   font-size: 1.375rem;
 }
-/* line 104, ../sass/_sepia.elements.scss */
+/* line 108, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content .timestamp,
 .content-wrapper .primary-content-full .timestamp {
   font-size: 10px;
   font-size: 0.625rem;
 }
-/* line 108, ../sass/_sepia.elements.scss */
+/* line 112, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content .tags,
 .content-wrapper .primary-content-full .tags {
   font-size: 14px;
   font-size: 0.875rem;
 }
-/* line 112, ../sass/_sepia.elements.scss */
+/* line 116, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content ul,
 .content-wrapper .primary-content-full ul {
   list-style: disc inside none;
   margin: 8px;
 }
-/* line 116, ../sass/_sepia.elements.scss */
+/* line 120, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content ul.action-links,
 .content-wrapper .primary-content-full ul.action-links {
   margin: 0;
 }
-/* line 121, ../sass/_sepia.elements.scss */
+/* line 125, ../sass/_sepia.elements.scss */
 .content-wrapper .primary-content ol,
 .content-wrapper .primary-content-full ol {
   list-style: decimal inside none;
   margin: 8px;
 }
-/* line 128, ../sass/_sepia.elements.scss */
+/* line 132, ../sass/_sepia.elements.scss */
 .content-wrapper .comment-wrapper {
   padding-top: 12px;
   border-top: 1px solid #bbbbbb;
 }
-/* line 131, ../sass/_sepia.elements.scss */
+/* line 135, ../sass/_sepia.elements.scss */
 .content-wrapper .comment-wrapper input {
   font-size: 14px;
   font-size: 0.875rem;
   padding: 4px;
 }
-/* line 137, ../sass/_sepia.elements.scss */
+/* line 141, ../sass/_sepia.elements.scss */
 .content-wrapper .menu .expanded .menu {
   margin-left: 8px;
 }
 
-/* line 142, ../sass/_sepia.elements.scss */
+/* line 146, ../sass/_sepia.elements.scss */
 img {
   display: inline;
   height: auto;
@@ -2270,7 +2275,7 @@ img {
   vertical-align: bottom;
 }
 
-/* line 149, ../sass/_sepia.elements.scss */
+/* line 153, ../sass/_sepia.elements.scss */
 footer {
   font-size: 12px;
   font-size: 0.75rem;
@@ -2280,7 +2285,7 @@ footer {
   z-index: 2;
   margin-top: 18px;
 }
-/* line 157, ../sass/_sepia.elements.scss */
+/* line 161, ../sass/_sepia.elements.scss */
 footer .site-name {
   font-size: 32px;
   font-size: 2rem;
